2004-09-09  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_tape.cc (fhandler_dev_tape::open): Fix typo.

2004-09-09  Bas van Gompel  <cygwin-patch.buzz@bavag.tmfweb.nl>

	* pipe.cc (create_selectable_pipe): Work around bug in Windows 95
	where CreateNamedPipe returns NULL.

2004-09-08  Pierre Humblet <pierre.humblet@ieee.org>

	* cygheap.h (cwdstuff::drive_length): New member.
	(cwdstuff::get_drive): New method.
	* path.cc (normalize_win32_path): Simplify by using cwdstuff::get_drive.
	(mount_info::conv_to_win32_path): Use cwdstuff::get_drive as default for /.
	(cwdstuff::set): Initialize drive_length.

2004-09-07  Christopher Faylor  <cgf@timesys.com>

	* cygtls.cc (_cygtls::init_thread): Set __sdidinit to negative value to
	indicate that it is "special".
	* thread.cc (pthread::exit): If __sdidinit is < 0, it was never really
	initialized so reset it to 0 before calling _reclaim_reent.

2004-09-05  Christopher Faylor  <cgf@timesys.com>

	* include/cygwin/version.h: Bump DLL minor number to 12.

2004-09-03  Corinna Vinschen  <corinna@vinschen.de>

	* security.cc: Fix a few more strace_prints.

2004-09-02  Christopher Faylor  <cgf@timesys.com>

	Regularize most strace_prints throughout so that %E is always preceded
	by a comma and elminate most uses of "foo = %s" to "foo %s".

2004-09-02  Bob Byrnes  <byrnes@curl.com>
	    Christopher Faylor  <cgf@timesys.com>

	* autoload.cc (NtQueryInformationFile): Return nonzero on error.
	* ntdll.h (FILE_PIPE_LOCAL_INFORMATION): Add.
	(NtQueryInformationFile): Fix types for last two arguments.
	* pipe.cc: Include stdlib.h, limits.h, and ntdll.h.
	(create_selectable_pipe): New function to create a pipe that can be
	used with NtQueryInformationFile for select.
	(fhandler_pipe::create): Call create_selectable_pipe instead of
	CreatePipe.
	(pipe): Use DEFAULT_PIPEBUFSIZE as argument to create_pipe.
	* select.cc: Include limits.h and ntdll.h.
	(peek_pipe): Add select_printf output.  Call NtQueryInformationFile to